force-app/main/default/objects/Opportunity/fields/Account_Development_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Development_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Development Plan</label>
    <referenceTo>Account_Development_Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>