force-app/main/default/objects/Opportunity/fields/Actual_Giganet_One_off_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Giganet_One_off_Cost__c</fullName>
    <inlineHelpText>The actual up front cost of the Giganet service</inlineHelpText>
    <label>Actual Giganet One-off Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>