force-app/main/default/objects/Opportunity/fields/Actual_Giganet_Rental_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Giganet_Rental_Cost__c</fullName>
    <inlineHelpText>The monthly cost of the Giganet service</inlineHelpText>
    <label>Actual Giganet Monthly Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>