force-app/main/default/objects/Opportunity/fields/Actual_Giganet_Total_Contract_GP__c.field-meta.xml
<CustomField>
    <fullName>Actual_Giganet_Total_Contract_GP__c</fullName>
    <formula>Total_Contract_Value__c -  (Actual_Giganet_Rental_Cost__c *  Contract_Term__c ) -  Actual_Giganet_One_off_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The actual (potentially) adjusted Giganet total contract GP based on actual cost prices</inlineHelpText>
    <label>Actual Giganet Total Contract GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>