force-app/main/default/objects/Opportunity/fields/Actual_Total_Contract_Profit__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Contract_Profit__c</fullName>
    <description>The actual total contract gross profit that has been verified by operations/accounts after the job has closed and any potential adjustments have been made to the opportunity.</description>
    <label>Actual Total Contract Profit</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>