force-app/main/default/objects/Opportunity/fields/BANT_Rating__c.field-meta.xml
<CustomField>
    <fullName>BANT_Rating__c</fullName>
    <formula>IMAGE(
IF( BANT_Score__c =0, &quot;/img/samples/stars_000.gif&quot;,
IF( BANT_Score__c &gt;0 &amp;&amp; BANT_Score__c &lt;= 30 , &quot;/img/samples/stars_100.gif&quot;,
IF( BANT_Score__c &gt;30 &amp;&amp; BANT_Score__c &lt;= 60, &quot;/img/samples/stars_200.gif&quot;,
IF( BANT_Score__c &gt;60 &amp;&amp; BANT_Score__c &lt;= 90, &quot;/img/samples/stars_300.gif&quot;,
IF( BANT_Score__c &gt;90 &amp;&amp; BANT_Score__c &lt;= 120, &quot;/img/samples/stars_400.gif&quot;,
IF( BANT_Score__c &gt;120 &amp;&amp; BANT_Score__c &lt;= 150, &quot;/img/samples/stars_500.gif&quot;,
&quot;/img/samples/stars_000.gif&quot;)))))),
&quot;rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BANT Rating</label>
    <type>Text</type>
</CustomField>