force-app/main/default/objects/Opportunity/fields/BANT_Score__c.field-meta.xml
<CustomField>
    <fullName>BANT_Score__c</fullName>
    <label>BANT Score</label>
    <summarizedField>BANT_Score__c.Score__c</summarizedField>
    <summaryForeignKey>BANT_Score__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>