force-app/main/default/objects/Opportunity/fields/Bronze_Maintenance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bronze_Maintenance_Amount__c</fullName>
    <formula>Bronze_Maintenance_Products__c *0.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bronze Maintenance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>