force-app/main/default/objects/Opportunity/fields/Bronze_Maintenance_Products__c.field-meta.xml
<CustomField>
    <fullName>Bronze_Maintenance_Products__c</fullName>
    <label>Bronze Maintenance Products</label>
    <summarizedField>OpportunityLineItem.Total_list_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Maintenance__c</field>
        <operation>equals</operation>
        <value>Bronze</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>