force-app/main/default/objects/Opportunity/fields/Commission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Commission_Notes__c</fullName>
    <inlineHelpText>Any extra notes about the commission amount, status or dates.</inlineHelpText>
    <label>Commission Notes</label>
    <type>TextArea</type>
</CustomField>