force-app/main/default/objects/Opportunity/fields/Commission_Status__c.field-meta.xml
<CustomField>
    <fullName>Commission_Status__c</fullName>
    <inlineHelpText>The status of the sales commission for this opportunity.</inlineHelpText>
    <label>Commission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payable</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Payable - Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Clawed Back</fullName>
                <label>Claw Back</label>
            </value>
            <value>
                <fullName>Clawed Back - Approved</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Not due</fullName>
                <isActive>false</isActive>
                <label>Not due</label>
            </value>
            <value>
                <fullName>Paid - Final</fullName>
                <isActive>false</isActive>
                <label>Paid - Final</label>
            </value>
            <value>
                <fullName>Paid - Interim</fullName>
                <isActive>false</isActive>
                <label>Paid - Interim</label>
            </value>
            <value>
                <fullName>Unprocessed</fullName>
                <isActive>false</isActive>
                <label>Unprocessed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>