force-app/main/default/objects/Opportunity/fields/Commission_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Updated_Date__c</fullName>
    <inlineHelpText>Date that the commission status/date has been changed</inlineHelpText>
    <label>Commission Updated Date</label>
    <type>Date</type>
</CustomField>