force-app/main/default/objects/Opportunity/fields/Completed_BANT_Scores__c.field-meta.xml
<CustomField>
    <fullName>Completed_BANT_Scores__c</fullName>
    <label>Completed BANT Scores</label>
    <summaryFilterItems>
        <field>BANT_Score__c.Answer__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>BANT_Score__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>