force-app/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <description>Minimum contract term in months</description>
    <inlineHelpText>Minimum contract term in months</inlineHelpText>
    <label>Contract Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>