force-app/main/default/objects/Opportunity/fields/Contract_to_update__c.field-meta.xml
<CustomField>
    <fullName>Contract_to_update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract that will be generated/updated from this opportunity</description>
    <label>Contract to update</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>