force-app/main/default/objects/Opportunity/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <description>Credit Safe Rating</description>
    <inlineHelpText>Credit Safe Rating</inlineHelpText>
    <label>Credit Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>