force-app/main/default/objects/Opportunity/fields/Custom_Dropbox_Path__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dropbox_Path__c</fullName>
    <formula>&apos;Accounts/&apos;  +  Account.Name + &apos;/Opportunities/&apos; + RIGHT(TEXT(YEAR(CloseDate)),2) + IF((MONTH(CloseDate) &lt; 10), &apos;0&apos; + TEXT(MONTH(CloseDate)), TEXT(MONTH(CloseDate))) + IF((DAY(CloseDate) &lt; 10), &apos;0&apos; + TEXT(DAY(CloseDate)), TEXT(DAY(CloseDate))) + &apos; - &apos; + SUBSTITUTE(Name,  Account.Name + &apos; - &apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Dropbox Path</label>
    <type>Text</type>
</CustomField>