force-app/main/default/objects/Opportunity/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <formula>Amount /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>