force-app/main/default/objects/Opportunity/fields/Existing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Existing_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Existing contract that will be replaced</description>
    <label>Existing Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (Existing Contract)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>