force-app/main/default/objects/Opportunity/fields/Existing_service_contract_start__c.field-meta.xml
<CustomField>
    <fullName>Existing_service_contract_start__c</fullName>
    <description>For renewals and upgrades, please enter the existing service&apos;s contract start date</description>
    <inlineHelpText>For renewals and upgrades, please enter the existing service&apos;s contract start date</inlineHelpText>
    <label>Existing service contract start</label>
    <type>Date</type>
</CustomField>