force-app/main/default/objects/Opportunity/fields/Gold_Maintenace_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gold_Maintenace_Amount__c</fullName>
    <formula>Gold_Maintenance_Product_Amount__c *0.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gold Maintenance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>