force-app/main/default/objects/Opportunity/fields/Gold_Maintenance_Product_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gold_Maintenance_Product_Amount__c</fullName>
    <label>Gold Maintenance Product Amount</label>
    <summarizedField>OpportunityLineItem.Total_list_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Maintenance__c</field>
        <operation>equals</operation>
        <value>Gold</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>