force-app/main/default/objects/Opportunity/fields/InstallGross_Profit__c.field-meta.xml
<CustomField>
    <fullName>InstallGross_Profit__c</fullName>
    <description>Install Gross Profit of Job</description>
    <inlineHelpText>Install Gross profit of Job</inlineHelpText>
    <label>Install Gross Profit</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>