force-app/main/default/objects/Opportunity/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <description>Sage Job Costing Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Sage Job Costing Number</inlineHelpText>
    <label>Job Number</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>