force-app/main/default/objects/Opportunity/fields/Lead_Interest__c.field-meta.xml
<CustomField>
    <fullName>Lead_Interest__c</fullName>
    <label>Lead Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone system on premise</fullName>
            </value>
            <value>
                <fullName>Phone system hosted</fullName>
            </value>
            <value>
                <fullName>Phone system maintenance</fullName>
            </value>
            <value>
                <fullName>Fixed Lines</fullName>
            </value>
            <value>
                <fullName>Fixed Calls</fullName>
            </value>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>Ethernet</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>