force-app/main/default/objects/Opportunity/fields/Location_of_Focus_City__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Focus_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location of Focus City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>