force-app/main/default/objects/Opportunity/fields/M12_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>M12_Account_Number__c</fullName>
    <formula>Account.M12_Account_Number__c</formula>
    <label>GN Account Number</label>
    <type>Text</type>
</CustomField>