force-app/main/default/objects/Opportunity/fields/Monthly_Contract_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Contract_Revenue__c</fullName>
    <description>Enter the monthly revenue for the service</description>
    <label>Monthly Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>