force-app/main/default/objects/Opportunity/fields/Number_of_Giganet_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Giganet_Products__c</fullName>
    <label>Number of Giganet Products</label>
    <summaryForeignKey>Giganet_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>