force-app/main/default/objects/Opportunity/fields/of_Broadband__c.field-meta.xml
<CustomField>
    <fullName>of_Broadband__c</fullName>
    <label># of Broadband</label>
    <summaryFilterItems>
        <field>Giganet_Product__c.Type__c</field>
        <operation>equals</operation>
        <value>FTTP, FTTC, ADSL</value>
    </summaryFilterItems>
    <summaryForeignKey>Giganet_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>