force-app/main/default/objects/Opportunity/fields/of_Leased_Lines__c.field-meta.xml
<CustomField>
    <fullName>of_Leased_Lines__c</fullName>
    <label># of Leased Lines</label>
    <summaryFilterItems>
        <field>Giganet_Product__c.Type__c</field>
        <operation>equals</operation>
        <value>Leased Line</value>
    </summaryFilterItems>
    <summaryForeignKey>Giganet_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>