force-app/main/default/objects/Opportunity/fields/Other_Lead_Interest__c.field-meta.xml
<CustomField>
    <fullName>Other_Lead_Interest__c</fullName>
    <label>Other Lead Interest</label>
    <length>50</length>
    <type>Text</type>
</CustomField>