force-app/main/default/objects/Opportunity/fields/Other_req__c.field-meta.xml
<CustomField>
    <fullName>Other_req__c</fullName>
    <label>Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>