force-app/main/default/objects/Opportunity/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Please advise how the purchase is being funded</description>
    <inlineHelpText>Please advise how the purchase is being funded.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease Rental</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>