force-app/main/default/objects/Opportunity/fields/Quotes_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quotes_Sent__c</fullName>
    <description>Enter number of quotes that have been sent to the prospect</description>
    <inlineHelpText>Enter number of quotes that have been sent to the prospect</inlineHelpText>
    <label>Quotes Sent</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>