force-app/main/default/objects/Opportunity/fields/Reason_Delayed_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Delayed_Detail__c</fullName>
    <inlineHelpText>Please complete the reason the opportunity is in delay.</inlineHelpText>
    <label>Reason Delayed Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer no Resource</fullName>
            </value>
            <value>
                <fullName>Customer Request Other</fullName>
            </value>
            <value>
                <fullName>Customer Site Move Delayed</fullName>
            </value>
            <value>
                <fullName>Customer Waiting for Budget</fullName>
            </value>
            <value>
                <fullName>Customer Waiting on Prerequisite</fullName>
            </value>
            <value>
                <fullName>M12 no Resource</fullName>
            </value>
            <value>
                <fullName>M12 Other</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>