force-app/main/default/objects/Opportunity/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget lost</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancelled - ECCs declined</fullName>
            </value>
            <value>
                <fullName>Cancelled - Wayleave Dispute</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Competition better solution</fullName>
            </value>
            <value>
                <fullName>Competition existing relationship</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Existing supplier</fullName>
            </value>
            <value>
                <fullName>In contract</fullName>
            </value>
            <value>
                <fullName>Price too little</fullName>
            </value>
            <value>
                <fullName>Price too much</fullName>
            </value>
            <value>
                <fullName>Product or Service not good fit</fullName>
            </value>
            <value>
                <fullName>Stale</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Too late</fullName>
            </value>
            <value>
                <fullName>Credit Check Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>