force-app/main/default/objects/Opportunity/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <label>Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone system</fullName>
                <label>Phone System (Legacy)</label>
            </value>
            <value>
                <fullName>Phone System (Ancillary items)</fullName>
            </value>
            <value>
                <fullName>Headsets</fullName>
                <label>Phone System (Headsets)</label>
            </value>
            <value>
                <fullName>Network</fullName>
                <label>Network Services</label>
            </value>
            <value>
                <fullName>DBX Managed</fullName>
            </value>
            <value>
                <fullName>DBX Lite</fullName>
            </value>
            <value>
                <fullName>DBX Contact Centre</fullName>
            </value>
            <value>
                <fullName>Giganet Connect</fullName>
            </value>
            <value>
                <fullName>Giganet Broadband</fullName>
            </value>
            <value>
                <fullName>Giganet Ethernet</fullName>
            </value>
            <value>
                <fullName>Giganet Hardware</fullName>
            </value>
            <value>
                <fullName>Giganet MPLS</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <label>Giganet Mobile</label>
            </value>
            <value>
                <fullName>Energy</fullName>
                <label>M12 Energy</label>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
                <label>Contact Centre (Legacy)</label>
            </value>
            <value>
                <fullName>Hardware (Other)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>