force-app/main/default/objects/Opportunity/fields/Sales_Commission_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commission_Paid_Date__c</fullName>
    <inlineHelpText>The date by which the sales commission will be paid by. If blank, then commission not due, paid or processed yet.</inlineHelpText>
    <label>Sales Commission Paid Date</label>
    <type>Date</type>
</CustomField>