force-app/main/default/objects/Opportunity/fields/Sales_Support_Request__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Support Request</label>
    <referenceTo>Sales_Support_Request__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>