force-app/main/default/objects/Opportunity/fields/Second_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Second_Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The second/ secondary salesperson who is involved with this opportunity.</description>
    <label>Second Salesperson</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>