force-app/main/default/objects/Opportunity/fields/Silver_Maintenance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Silver_Maintenance_Amount__c</fullName>
    <formula>Silver_Maintenance_Product_Amount__c *0.12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Silver Maintenance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>