force-app/main/default/objects/Opportunity/fields/Silver_Maintenance_Product_Amount__c.field-meta.xml
<CustomField>
    <fullName>Silver_Maintenance_Product_Amount__c</fullName>
    <label>Silver Maintenance Product Amount</label>
    <summarizedField>OpportunityLineItem.Total_list_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Maintenance__c</field>
        <operation>equals</operation>
        <value>Silver</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>