force-app/main/default/objects/Opportunity/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <label>Maintenance Payment Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
                <default>true</default>
                <label>Annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>