force-app/main/default/objects/Opportunity/fields/Tarrif_Name__c.field-meta.xml
<CustomField>
    <fullName>Tarrif_Name__c</fullName>
    <label>Tarrif Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>