force-app/main/default/objects/Opportunity/fields/Total_BANT_Scores__c.field-meta.xml
<CustomField>
    <fullName>Total_BANT_Scores__c</fullName>
    <label>Total BANT Scores</label>
    <summaryForeignKey>BANT_Score__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>