force-app/main/default/objects/Opportunity/fields/Total_Contract_GP__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_GP__c</fullName>
    <formula>(Monthly_Contract_GP__c *  Contract_Term__c) +  InstallGross_Profit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>