force-app/main/default/objects/Opportunity/fields/Total_Contract_GP_Change__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_GP_Change__c</fullName>
    <formula>Total_Contract_GP__c -  Previous_Opportunity__r.Total_Contract_GP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract GP Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>