force-app/main/default/objects/Opportunity/fields/Total_Contract_GP_Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_GP_Discrepancy__c</fullName>
    <formula>Actual_Giganet_Total_Contract_GP__c -  Total_Contract_GP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between the actual contract GP and the sales person&apos;s initial expected GP.</inlineHelpText>
    <label>Total Contract GP Discrepancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>