force-app/main/default/objects/Opportunity/fields/Total_Contract_Revenue_Change__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Revenue_Change__c</fullName>
    <formula>Total_Contract_Value__c  -  Previous_Opportunity__r.Total_Contract_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Revenue Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>