force-app/main/default/objects/Opportunity/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <formula>(Monthly_Contract_Revenue__c *  Contract_Term__c) +  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Contract or Solution Revenue</inlineHelpText>
    <label>Total Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>