force-app/main/default/objects/Opportunity/fields/Total_Contract_Value_Auto__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value_Auto__c</fullName>
    <label>Total Contract Value Auto</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>